@@ -48,5 +48,7 @@
 ../lib/misc/sharedlib.h
 ../lib/report/report.h
 ../lib/uuid/uuid.h
+../libdm/misc/dm-ioctl.h
+../libdm/misc/kdev_t.h
 ../po/pogen.h
 ../tools/version.h
